--- a/style.css
+++ b/style.css
@@ -23,9 +23,15 @@
     display: inline-block;
     
 }
-.dark{
+.dark {
     background-color: #222;
     color: #ffffff;
+}
+
+.dark .content-left h1,
+.dark .nav-list li a {
+    color: #ffffff; /* Change the text color for h1 and nav in dark mode */
+    /* Add any additional styles specific to h1 and nav in dark mode */
 }
 body{
     background-color: #FFFFFF;
@@ -40,7 +46,7 @@ header{
 }
 header h3{
     font-family: 'Righteous', sans-serif;
-    padding:10px 590px 0 0;
+    padding:10px 550px 0 0;
     cursor: pointer;
 }
 nav{
@@ -314,26 +320,32 @@ h2{
         width: 100%;
         text-align: center;
         margin: 20px 0px;
-        margin-top: -160px;
+        margin-top: 60px;
         position: relative;
-        right: 18px;
+        right: 30px;
+        left: 6px;
+      
+       
     }
     .content-left h1{
-        margin-left: 45px;
+        margin-left: 5px;
         text-align: center;
+        font-size: 50px;
     }
     .content-left p{
-        margin-left: 20px;
+        margin-left: -10px;
         text-align: center;
+        font-size: 20px;
     }
     .content-left .to-do{
-        margin-left: 40px;
+        margin-left: 5px;
     }
     .content-left .to-do a{
         text-decoration: none;
     }
 
     .content-right img {
+        display: none;
         width: 80%;
         margin-right: 0;
     }
@@ -349,13 +361,13 @@ h2{
     .about-left img {
         width: 80%;
         height: 26rem;
-        top: 26%;
+        top: 16%;
         left: -1%;
         margin: 10px auto;
     }
     h2{
         margin-left: 90px;
-        margin-top: 110px;
+        margin-top: 210px;
         margin-right: 55px;
         
     }
@@ -364,7 +376,7 @@ h2{
         text-align: center;
         margin-bottom: 20px;
         position: relative;
-        top: -190px;
+        top: -290px;
         right:50px;
         width: 350px;
         margin-left: 190px;
